# tidb

./: go.mod  go.sum
config/: config.toml.example
distsql/: select_result.go
executor/: aggregate_test.go  analyze.go  analyze_test.go  builder.go  compiler.go  index_lookup_join.go  index_lookup_merge_join.go  infoschema_reader.go  mpp_gather.go  show_stats_test.go  simple_test.go  table_reader.go  union_scan.go  update.go  write.go
expression/: builtin_compare.go  constant.go  expression.go  integration_test.go  simple_rewriter.go  util.go
expression/aggregation/: max_min.go
pkg/ddl/: BUILD.bazel  db_change_test.go  index_modify_test.go
pkg/expression/: BUILD.bazel  column.go  constant.go  expression.go  scalar_function.go
pkg/planner/core/joingraph/: BUILD.bazel  builder.go  greedy.go  leading_hint.go
pkg/testkit/: result.go  testkit.go
planner/core/: cbo_test.go  common_plans.go  enforce_mpp_test.go  exhaust_physical_plans.go  explain.go  expression_rewriter.go  find_best_task.go  flat_plan.go  fragment.go  hints.go  initialize.go  logical_plan_builder.go  logical_plans.go  optimizer.go  physical_plans.go  plan.go  plan_to_pb.go  planbuilder.go  rule_column_pruning.go  stats.go  (+6 more)
server/: conn_stmt.go  http_handler.go
session/: session.go  tidb.go
statistics/: builder.go  cmsketch.go  feedback.go  feedback_test.go  fmsketch.go  histogram.go  histogram_test.go  integration_test.go  row_sampler.go  sample_test.go  scalar.go  scalar_test.go  selectivity_test.go  statistics_test.go  table.go
tablecodec/: tablecodec.go
types/: compare.go  datum.go
(+65 files in other folders)
